bin/testsuite/tests/compiler/src/errors/compiler5095.swg
#global testerror "Err0727"

interface toto
{
    x: s32
}